# DRAT-Learning

./: README.md  flagimportant.py  main.py  pyproject.toml  searchalgorithm.py  sendemail.py
static/: style.css
templates/: dashboard.html  errorpage.html  index.html  login.html  resetpassword.html  signed-up.html  signup.html  style.css
