[tool.poetry]
name = "DRAT Learning"
version = "0.6.0"
description = "A learning tool for students!"
authors = ["AW_Dev <aaronwdev.ml>", "IngeniousMC <hog.rider>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.1.2"
requests = "^2.28.0"
firebase-admin = "^5.2.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"